--- a/_config.yml
+++ b/_config.yml
@@ -111,8 +111,7 @@ x_username: # your X handle
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
-contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+contact_note: # a note to display on the contact page for best way to reach me
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
